# NekoLang

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  headers.h  main.cpp  utils.h
common/: opcodes.cpp  opcodes.h
common/files/: NekoFile.cpp  NekoFile.h  NekoReader.cpp  NekoReader.h  NekoWriter.cpp  NekoWriter.h
common/internal/: NekoBox.cpp  NekoBox.h  NekoFunction.cpp  NekoFunction.h  NekoStack.cpp  NekoStack.h  NekoVariable.cpp  NekoVariable.h
compiler/: compiler.cpp  compiler.h  reader.cpp  reader.h
runtime/: runtime.cpp  runtime.h
runtime/ops/: NekoOp.h  NekoOpBool.cpp  NekoOpConcat.cpp  NekoOpCs.cpp  NekoOpDup.cpp  NekoOpLabel.cpp  NekoOpNop.cpp  NekoOpNumber.cpp  NekoOpOut.cpp  NekoOpPop.cpp  NekoOpReturn.cpp  NekoOpString.cpp
runtime/types/: NekoBool.cpp  NekoBool.h  NekoNumber.cpp  NekoNumber.h  NekoObject.h  NekoString.cpp  NekoString.h
runtime/vm/: NekoClass.cpp  NekoClass.h  NekoFunction.cpp  NekoFunction.h  NekoStack.cpp  NekoStack.h
sources/: main.cat  test.cat  testbox.cat  testbox2.cat  utils.cat
sources/test_projects/project1/: MakeMeow  main.cat  other.cat
sources/test_projects/project1/src/: free-standing-code.cat  main.cat  test.cat
sources/testing/: test.cat  test2.cat  testbox.cat  testbox2.cat  testbox3.cat  testbox4.cat
utils/: utils.h
